# ConsoleDash

./: .gitignore  CMakeLists.txt  GameEngine.cpp  GameEngine.h  README.md  main.cpp
include/: ColorHelper.h  ConsoleDash.h  InputHelper.h  LevelLoader.h  MainMenu.h  ThreadPool.h
levels/: level_1.txt  level_19.txt  level_2.txt  level_20.txt  level_3.txt  level_4.txt
src/: ConsoleDash.cpp  ConsoleDashLogic.cpp  ConsoleDashRender.cpp  InputHelper.cpp  LevelLoader.cpp  MainMenu.cpp  ThreadPool.cpp  main.cpp
tests/: main_tests.cpp
